@@ -1,8 +1,5 @@
 The "sync" support should be done asynchronously, not with waitpid.
 
-introduce a new exec command to tell minit to execve() a new version of
-  it without reboot
-
 if hwclock is used to adjust the system clock by a few hours, the minit
   times will be completely off.  Maybe we should use the poll timeout to
   keep track of what we think how long we are running and use that as a
