@@ -5,6 +5,10 @@
   add shutdown
   add -Wall and -W and kill resulting compiler warnings
   several fixes (Bernd Wachter)
+  add update support - tell minit to execve something else, a newer
+    version of itself, preferably (Florian Westphal)
+  also add minit-update program to download state from old minit and
+    upload state to new minit after update (Florian Westphal)
 
 0.9.1:
   fix embarassing typo in msvc (Gelu G. Lupas)
